# smaut

./: LICENSE  README.md  smaut.c  smaut.h
example/: CMakeLists.txt  do_division.c  do_division.h  test_do_division.c
example/ccan/: README  config.h
